--- a/SEW3/01_HerbariumConsole/01_HerbariumConsole.csproj
+++ b/SEW3/01_HerbariumConsole/01_HerbariumConsole.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\CS142_HerbariumLibrary\CS142_HerbariumLibrary\CS142_HerbariumLibrary.csproj" />
+    <ProjectReference Include="..\CS142_HerbariumLibrary\CS142_HerbariumLibrary.csproj" />
   </ItemGroup>
 
 </Project>
