--- a/SEW3/CS142_HerbariumLibrary/CS142_HerbariumLibrary.csproj
+++ b/SEW3/CS142_HerbariumLibrary/CS142_HerbariumLibrary.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
+    <PackageReference Include="MetadataExtractor" Version="2.8.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +25,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="HerbariumTemplate.pptx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="HerbariumTemplate2.pptx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="metadaten.txt">
