--- a/SEW3/12_Sierpinski/12_Sierpinski.csproj
+++ b/SEW3/12_Sierpinski/12_Sierpinski.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
-    <RootNamespace>_11_TurtleWindowsFormen</RootNamespace>
+    <RootNamespace>_12_Sierpinski</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
